# reactex

./: .gitignore  Cargo.toml  rustfmt.toml  toto.md
examples/: case001.rs  (+10 more)
reactex-core/: Cargo.toml
reactex-core/examples/: example004.rs  shitdown_hook.rs
reactex-core/src/: api.rs  cause.rs  component.rs  component_index.rs  container.rs  ctx.rs  entity.rs  entity_component_index.rs  entity_key.rs  entity_mut.rs  entity_storage.rs  entity_uncommitted.rs  execution.rs  facade_2_0.rs  filter.rs  filter_manager.rs  gen.rs  lang.rs  lib.rs  macro_facade.rs  module.rs  mut_ref.rs  opt_tiny_vec.rs  optimistic_list.rs  panic_hook.rs  pool_pump.rs  pools.rs  signal_manager.rs  test_facade.rs  typed_index_vec.rs  var_optimistic_list.rs  world.rs  world_facade.rs  world_result.rs  world_state.rs
reactex-core/src/filter/: events.rs  filter.rs  filter_desc.rs  filter_manager.rs  filter_manager_events.rs  filter_manager_iter.rs  mod.rs
reactex-core/src/internal/: cause.rs  change_buffer.rs  component_key.rs  component_mappings.rs  component_pool_manager.rs  entity_component_index.rs  entity_key_generator.rs  entity_storage.rs  execution.rs  filter.rs  filter_manager.rs  filter_manager_events.rs  filter_manager_iter.rs  mod.rs  signal_manager.rs  signal_queue.rs  signal_sender.rs  signal_storage.rs  world_configure.rs  world_core.rs  world_extras.rs  world_immutable.rs  world_pipeline.rs  world_pipeline_steps.rs  world_stable.rs  world_volatile.rs
reactex-core/tests/: actors_based_tests.rs  event_tests.rs  log4rs.test.yaml  query_tests.rs  signal_tests.rs  world_tests.rs
(+85 files in other folders)
