[package]
name = "reactex-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reactex-macro = { path = "../reactex-macro"}
ctor = "0.2.3"
libc = "0.2.147"
log = "0.4.19"
tinyvec = {version = "1.6.0", features = ["alloc"]}
thiserror = "1.0.40"
justerror = "1.1.0"
log4rs = "1.2.0"
to_vec = "0.1.0"
